DE2197: changed to use Long.valueOf